Fix padding and spacing

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h2, h3 {
     grid-area: card1; 
     background-color: hsl(31, 66%, 93%);
     border-radius: 8px;
-    padding: 50px 20px;
+    padding: 50px 25px;
     color: hsl(0, 0%, 7%);
 }
 
@@ -94,15 +94,19 @@ h2, h3 {
     grid-area: card3; 
     background-color: hsl(254, 88%, 90%);
     border-radius: 8px;
-    padding: 30px 0 30px 20px;
+    padding: 30px 0 30px 25px;
 }
 
 .card4 { 
     grid-area: card4; 
     background-color: hsl(39, 100%, 71%);
     border-radius: 8px;
-    padding: 10px;
+    padding: 25px;
     color: hsl(0, 0%, 7%);
+}
+
+.card4 > h2 {
+    margin-top: 0;
 }
 
 .card5 { 
@@ -292,12 +296,17 @@ h2, h3 {
         padding: 20px;
     }
 
-    .card4, .card7 {
+    .card4 {
+        text-align: left;
         padding: 20px;
     }
 
     .card6 {
         padding: 20px 20px 0 20px;
+    }
+
+    .card7 {
+        padding: 20px;
     }
 
     .card8 {
